db-cluster/users/k8s-cluster2/ns-porkeat-c18c6214/aefwaf-dfd3bf73/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: aefwaf-dfd3bf73-tcp
  namespace: ns-porkeat-c18c6214
spec:
  entryPoints:
  - postgresql
  routes:
  - match: 'HostSNI(`aefwaf.seang.shop`) '
    services:
    - name: aefwaf-dfd3bf73-postgresql-rw
      port: null
  tls:
    passthrough: true
